# uav_mpc_planner

./: .gitignore  README.md  requirements.txt  tmp_casadi_compiler_shellLN4cmo.dylib
config/: uav_model.yaml
cpp_solver/: CMakeLists.txt
cpp_solver/include/: mpc_solver.h
cpp_solver/src/: bindings.cpp
evaluation/benchmarks/: latency_benchmark.py
evaluation/monte_carlo/: run_monte_carlo.py  wind_sampler.py
evaluation/reports/: robustness_report.ipynb
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Sidebar.tsx  TelemetryPanel.tsx  UAVCanvas.tsx
simulation/launch/: mpc_only_launch.py  sim_launch.py
tests/: test_dynamics.py  test_mpc_solver.py
uav_mpc/controllers/: lqr_baseline.py  mpc_controller.py  receding_horizon.py
uav_mpc/models/: quadrotor_dynamics.py  wind_disturbance.py
uav_mpc/ros2_nodes/: mpc_node.py  state_estimator_node.py  visualizer_node.py
